Fix gap below upper container

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -206,6 +206,7 @@ $loader-scale-duration: 300ms;
 }
 
 .braintree-loaded .braintree-upper-container {
+  min-height: inherit;
   min-height: auto;
 
   &:before {
